# electricity_prices

./: .dockerignore  .gitignore  BUILD.bazel  CMakeLists.txt  CNAME  Dockerfile  README.md  index.html  render.yaml  run.py
.github/workflows/: ci.yml
include/: fetch.hpp  parse.hpp
src/: fetch.cpp  main.cpp  parse.cpp
webapp/: app.py
webapp/static/: style.css
webapp/templates/: index.html  result.html
